<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">PhotoFlickr</string>
    <string name="action_settings">Settings</string>
    <string name="action_search">Search</string>
    <string name="action_upload">Upload</string>
    <string name="hello_world">Hello world!</string>
    <string name="keyword">Keyword</string>
    <string name="avatar">Avatar</string>
    <string name="photo">Photo</string>
    <string name="title_activity_detail">Detail Information</string>
    <string name="comment">Comments for this Photo:</string>
    <string name="no_network_connection_toast">No network connection found</string>
    <string name="description_zoom_touch_close">Touch to close</string>
    <string name="title_activity_image_show">Detail Image</string>
    <string name="loading">Loading more result ...</string>
    <string name="title_activity_camera">Capture Picture</string>
    <string name="button_capture">Capture</string>
    <string name="button_recapture">Recapture</string>
    <string name="photo_detail">Enter Photo detail to upload</string>
    <string name="photo_title">Title</string>
    <string name="photo_description">Description</string>
    <string name="button_upload">Upload</string>
    <string name="button_cancel">Cancel</string>
    <string name="title_activity_fullscreen">FullscreenActivity</string>
    <string name="dummy_button">Dummy Button</string>
    <string name="dummy_content">DUMMY\nCONTENT</string>

</resources>