<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".DetailActivity" >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal" >

        <ImageView
            android:id="@+id/avatar"
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:layout_margin="5dp"
            android:contentDescription="@string/avatar" />

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_margin="5dp"
            android:layout_weight="1"
            android:orientation="vertical" >

            <TextView
                android:id="@+id/username"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textIsSelectable="false" >
            </TextView>

            <TextView
                android:id="@+id/fullname"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textIsSelectable="false" >
            </TextView>

            <TextView
                android:id="@+id/location"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textIsSelectable="false" >
            </TextView>
        </LinearLayout>

        <TextView
            android:id="@+id/postdate"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="5dp"
            android:textIsSelectable="false"
            android:textSize="12sp" >
        </TextView>
    </LinearLayout>

    <ImageView
        android:id="@+id/photo"
        android:layout_width="240dp"
        android:layout_height="240dp"
        android:layout_gravity="center_horizontal"
        android:layout_margin="5dp"
        android:contentDescription="@string/photo" />

    <TextView
        android:id="@+id/description"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="5dp"
        android:textIsSelectable="false" >
    </TextView>
	
    <TextView
        android:id="@+id/comment"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="5dp"
        android:textIsSelectable="false"
        android:textColor="@android:color/holo_blue_dark"
        android:text="@string/comment" >
    </TextView>
    
	<ListView android:id="@+id/comment_list"
	    android:layout_width="match_parent"
	    android:layout_height="fill_parent"
	    ></ListView>
</LinearLayout>